--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
         "classnames": "^2.5.1",
         "lucide-react": "^0.482.0",
         "normalize.css": "^8.0.1",
+        "query-string": "^9.1.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.3.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
