--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^7.0.0",
+        "@reduxjs/toolkit": "^2.6.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.8.4",
         "classnames": "^2.5.1",
         "lucide-react": "^0.482.0",
         "normalize.css": "^8.0.1",
@@ -14,6 +19,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
+        "react-pdf": "^9.2.1",
+        "react-redux": "^9.2.0",
         "react-router-dom": "^7.3.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
@@ -43,6 +50,9 @@
         ]
     },
     "devDependencies": {
-        "sass": "^1.85.1"
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.3",
+        "sass": "^1.85.1",
+        "tailwindcss": "^4.0.17"
     }
 }
