--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^7.0.0",
         "@reduxjs/toolkit": "^2.6.1",
         "@testing-library/dom": "^10.4.0",
