Viết logic cho trang, Home, Login, Register, FilterDepartment, FilterSubject

--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.13.6",
+        "@emailjs/browser": "^4.4.1",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@fortawesome/fontawesome-svg-core": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/icons-material": "^7.0.1",
         "@mui/material": "^7.0.0",
         "@reduxjs/toolkit": "^2.6.1",
+        "@sendgrid/mail": "^8.1.4",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tippyjs/react": "^4.2.6",
         "axios": "^1.8.4",
         "classnames": "^2.5.1",
+        "firebase": "^11.6.0",
+        "graphql": "^16.10.0",
         "lucide-react": "^0.482.0",
         "normalize.css": "^8.0.1",
         "query-string": "^9.1.1",
@@ -26,6 +33,9 @@
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.3.0",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.30.3",
+        "redux": "^5.0.1",
+        "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
