--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "antd": "^5.24.6",
         "axios": "^1.8.4",
         "classnames": "^2.5.1",
         "firebase": "^11.6.0",
@@ -35,6 +36,7 @@
         "react-scripts": "5.0.1",
         "react-slick": "^0.30.3",
         "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
